Css to fix img stretching

--- a/src/components/userSettings/userSettings.module.css
+++ b/src/components/userSettings/userSettings.module.css
@@ -16,13 +16,15 @@
 
  .profileBox{
     display: flex;
-    justify-content: flex-end; 
+    justify-content: flex-end;
+    flex-direction: column; 
+    align-items: flex-start;
  }
 
 .fileBox{
     display: flex;
     justify-content: flex-end;
-    padding-top: 20px;  
+    padding-top: 20px;
  }
 
 .profileBox img{
@@ -35,13 +37,13 @@
    justify-content: center;
    flex-direction: column;
    width: 100%;
-   align-self: center; 
+   align-self: center;
 }
 
 .settingsBox label{
   margin: 10px;
   font-size: 1.1em;
-  
+
 }
 
 .settingsBox input{
@@ -64,34 +66,34 @@
    width: 100px;
    box-shadow:0 0 4px #a0a19f;
    text-align: center;
-   transition: all 0.5s;  
+   transition: all 0.5s;
  }
  .updateButton:hover {
     border-radius: 25px;
-    background-color: hoverColor;   
+    background-color: hoverColor;
     color: black;
  }
 
- /* Phone Styles */ 
+ /* Phone Styles */
  @media only screen and (max-width: 767px) {
    .profileBox{
       display: flex;
-      justify-content: center;      
+      justify-content: center;
    }
    .fileBox{
     display: flex;
     justify-content: center;
-   }     
+   }
  }
-  
-  /* Tablet Styles */ 
-  @media only screen 
-  and (min-device-width: 601px) 
+
+  /* Tablet Styles */
+  @media only screen
+  and (min-device-width: 601px)
   and (-webkit-min-device-pixel-ratio: 1) {
-   
-   
+
+
   }
-  /* Desktop Styles */ 
+  /* Desktop Styles */
   @media only screen and (min-width:1024px) {
       .settingsBox > form{
          width: 70%;
